apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: radarr
    namespace: media
spec:
    selector:
        matchLabels:
            app: radarr
    template:
        metadata:
            labels:
                app: radarr
        spec:
            containers:
                - name: radarr
                  image: lscr.io/linuxserver/radarr:latest
                  securityContext:
                      runAsUser: 911
                      runAsGroup: 911
                      fsGroup: 911
                      readOnlyRootFilesystem: true
                  ports:
                      - containerPort: 7878
                        name: http
                  volumeMounts:
                      - name: run
                        mountPath: /run
                      - name: config
                        mountPath: /config
                      - name: data
                        mountPath: /data
            volumes:
                - name: run
                  emptyDir:
                      medium: Memory
                - name: config
                  persistentVolumeClaim:
                      claimName: radarr-config
                - name: template
                  configMap:
                      name: radarr-config-template
                - name: data
                  persistentVolumeClaim:
                      claimName: media-volume
