apps/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: radarr
    namespace: media
spec:
    selector:
        app: radarr
    ports:
        - port: 80
          targetPort: 9000
          protocol: TCP
          name: http
    type: ClusterIP
